Fix: align items in the footer div vertically in the middle

--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ footer {
 footer div {
     flex: 1;
     display: flex;
+    align-items: center;
     padding: 1rem 5rem;
 }
 
